--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "phpspec/phpspec": "2.0.*@dev"
     },
     "autoload": {
-        "psr-4": { "BenjaM1\\": "src/BenjaM1" }
+        "psr-0": { "BenjaM1": "src" }
     },
     "extra": {
         "branch-alias": {
