--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,12 @@
         }
     ],
     "require": {
-        "symfony/process": "2.5",
-        "michelf/php-markdown": "1.4.*@dev"
+        "symfony/process": "~2.4",
+        "michelf/php-markdown": "~1.4"
 
     },
     "require-dev": {
-        "phpspec/phpspec": "2.0.*@dev"
+        "phpspec/phpspec": "~2.0"
     },
     "autoload": {
         "psr-0": { "BenjaM1": "src" }
